--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -31,7 +31,7 @@
                   <div class="col-xs-4 col-md-4 col-lg-4 font-size-vary-grn">
                     {{ grnHeader.grnDate | date: "dd-MMM-yyy" }}
                   </div>
-                  <div *ngIf="grnHeader && grnHeader.documentList" class="col-xs-4 col-md-4 col-lg-4 display-flex justify-content-flex-end p-0" (click)="openDocuments(grnHeader.documentList);mep.expanded = false">
+                  <div class="col-xs-4 col-md-4 col-lg-4 display-flex justify-content-flex-end p-0" (click)="openDocuments(grnHeader.documentList);mep.expanded = false">
                     <img class="file-icon" src="../../../../assets/images/file-doc.png" />
                     <span class="font-size-vary-grn main-color text-decoration-underline">Documents</span>
                   </div>
