--- a/src/app/shared/dialogs/show-documents/show-documents.component.html
+++ b/src/app/shared/dialogs/show-documents/show-documents.component.html
@@ -6,29 +6,42 @@
       </button>
   </div>
 
-<div mat-dialog-content *ngIf="data">
+<div mat-dialog-content>
   <div class="row display-flex justify-content-center">
     <!-- Documents -->
-  
+    <ng-container *ngIf="documentList !=null && documentList.length>0">
       <ng-container class="files-list"*ngFor="let file of documentList">
-      <div class="display-flex width94Percent justify-content-space-between">
-          <div class="documents-name p-t-10">
-            <img class="file-icon" src="../../../../assets/images/file-doc.png" />
-            <span class="word-break-all">{{ file.DocumentDesc }}</span>
-          </div>
-
-          <div class="show-download">
-            <!-- <img src="../../../../assets/images/download-po.png" (click)="downloadURI(file.DocumentUrl,file.DocumentDesc)"/> -->
-              <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
-              <i class="material-icons">
-                remove_red_eye
-              </i>
-            </a>
-          </div>
+        <div class="display-flex width94Percent justify-content-space-between">
+            <div class="documents-name p-t-10">
+              <img class="file-icon" src="../../../../assets/images/file-doc.png" />
+              <span class="word-break-all">{{ file.DocumentDesc }}</span>
+            </div>
+  
+            <div class="show-download">
+              <!-- <img src="../../../../assets/images/download-po.png" (click)="downloadURI(file.DocumentUrl,file.DocumentDesc)"/> -->
+                <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
+                <i class="material-icons">
+                  remove_red_eye
+                </i>
+              </a>
+            </div>
+        </div>
+        </ng-container>
+    </ng-container>
+    <ng-container *ngIf="documentList == null || (documentList && documentList.length == 0)">
+      <div class="p-t-10 display-flex justify-content-center">
+        <img class="width40Percent" src="../../../../assets/images/docs.png">
       </div>
-      </ng-container>
+      <div>
+        <span  class="p-t-10 p-b-10 display-flex justify-content-center text-align-justify">
+         <span class="text-semi-bold p-r-5">
+          Oops!
+         </span>  You have no documents to see.
+        </span>
+      </div>
+    </ng-container>
+     
 
-    
         </div>
       </div>
    
