--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
-  <div *ngIf="!allProjects || (allProjects && allProjects.length == 0)" class="parent min-height">
+  <div *ngIf="!allProjects || (allProjects && allProjects.length == 0)" class="parent p-t-20 min-height">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
         <img src="../../../../assets/images/project-background.png" alt="Project Logo" />
