--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,5 +1,5 @@
 <div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height">
+  <div class="p-l-20 p-r-20 p-b-20 min-height p-t-20">
     <ng-container *ngIf="materialDataLength == 0 && projectWiseData.length == 0">
       <div class="wrapper-btn-center">
         <div class="add-user-img global-store-image">
