--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -1,5 +1,5 @@
 <div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height">
+  <div class="p-l-20 p-r-20 p-b-20 p-t-20 min-height">
     <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
     <div class="p-t-10">
       <mat-card class="parent">
