--- a/src/app/features/verify-email/verify-email.component.html
+++ b/src/app/features/verify-email/verify-email.component.html
@@ -1,4 +1,4 @@
-<section class="w-vw-99 h-vh-70 p-t-10 flex-center text-webkit-center email-verification">
+<section class="w-vw-99 h-vh-70 p-t-10 flex-center text-webkit-center email-verification verify-email">
   <div class="row background-white-color border-radius-10 p-20 mt-5 width-60">
     <div class="col-md-12 text-center">
       <span><img class="buildsupply-logo" src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
