--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -561,6 +561,27 @@ body,
   .email-verification .width-60 {
     width: 100% !important;
   }
+
+  .verify-email {
+    width: 75vw!important;
+    margin: auto;
+  }
+
+  .verify-email .ink-color {
+    font-size: 24px;
+    line-height: 45px !important;
+  }
+}
+
+@media only screen and (max-width: 460px){
+  .verify-email {
+    width: 90vw !important;
+  }
+
+  .verify-email .ink-color {
+    font-size: 20px;
+    line-height: 35px !important;
+  }
 }
 
 @media only screen and (max-width: 445px){
