--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -163,6 +163,9 @@ $spaceremamounts: (0.06rem, 0.13rem, 0.19rem, 0.3rem, 0.4rem, 0.5rem, 0.6rem, 0.
   .line-vh-#{$space} {
     line-height: #{$space}vh !important;
   }
+  .line-#{$space}-px {
+    line-height: #{$space}px !important;
+  }
   .fontsize-#{$space}-px {
     font-size: #{$space}px !important ;
   }
